# model-inference-fastapi

./: .coveragerc  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: test.yml
examples/imagenet_classification/: model_service.py  test_model_service.py
examples/imagenet_classification_keras/: test_model_service.py
examples/imagenet_classification_torch/: Dockerfile  docker-compose.yml  model_service.py  test_model_service.py
model_inference_fastapi/: main.py  model_service.py  model_service_base.py  utils.py
tests/: test_main.py  test_model_service.py
