[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-inference-fastapi"
version = "0.0.3"
description = "Use fastapi for model inference over http"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["inference", "deploy", "api", "machine learning", "deep learning"]
authors = [
  { name="iamr0b0tx", email="tech@robotslimited.com" },
]
maintainers = [
  { name="iamr0b0tx", email="tech@robotslimited.com" },
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    'License :: OSI Approved :: MIT License',
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.94.0",
    "uvicorn[standard]>=0.21.0",
    "pillow>=9.4.0",
    "python-multipart>=0.0.6",
]
#dynamic = ["version"]


[project.urls]
Homepage = "https://https://github.com/robotstech/model-inference-fastapi"
Repository = "https://https://github.com/robotstech/model-inference-fastapi.git"
"Bug Tracker" = "https://github.com/robotstech/model-inference-fastapi/issues"
